--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,7 @@ filename = cpm.yml
 filename = README.md
 match = ^(xt|author|maint|example|eg)/
 [Prereqs::From::cpmfile]
+phases = configure,build,runtime,test
 [ModuleBuildTiny]
 [MetaJSON]
 [StaticInstall]
